# jobfinder

./: .gitignore  README.md  fetch_jobs.py  match_jobs.py  middleware.ts  notify.py  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
.github/workflows/: cover_letter_pdf.yml  scrape.yml
app/: globals.css  layout.tsx  page.tsx
app/cover-letters/: page.tsx
app/dashboard/: page.tsx
app/inbox/: page.tsx
app/login/: page.tsx
app/tracker/: page.tsx
components/: cover-letters-view.tsx  dashboard-nav.tsx  dashboard-overview.tsx  job-detail-view.tsx  jobs-view.tsx  login-form.tsx  shell.tsx
config/: companies.yaml  cover_letter_prompt.md  matching.yaml  sources.yaml
dashboard-tests/: auth.test.ts  cover-letter-compile-route.test.ts  cover-letter-pdf-route.test.ts  cover-letter-route.test.ts  cover-letter-storage.test.ts  cover-letter.test.ts  data-storage.test.ts  data.test.ts  github.test.ts  postgres-documents.test.ts  status-route.test.ts
data/: applications.json  cover_letter_template.tex  jobs.json  source_health.json
docs/: company_source_onboarding.md
lib/cover-letter/: generate.ts  latex.ts  (+4 more)
plans/: masterplan.md  phase2_matching_plan.md  phase3_notifications_plan.md  phase4_dashboard_plan.md  phase5_cover_letter_plan.md  scraper_plan.md
scrapers/: __init__.py  abn_amro.py  albert_heijn.py  base.py  greenhouse.py  html.py  icims.py  ing.py  just_eat_takeaway.py
scripts/: compile-cover-letter-pdf.mjs  mark-cover-letter-compile-failed.mjs  sync-resume-to-postgres.mjs
tests/: test_fetch_jobs.py  test_match_jobs.py  test_notify.py
(+14 files in other folders)
